# traffic_tracking

./: .gitignore  README.md  run.sh  traffic_dashboard.service
esp32_helper/: CMakeLists.txt  README.md  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1.old
esp32_helper/src/: main.c
interface/: README.md  config.py  dashboard.py  requirements.txt
interface/static/: style.css
interface/templates/: index.html
recorder/: CMakeLists.txt  README.md  config.h  main.cpp  recorder.cpp  snapshot.cpp
